--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
-  <div class="container-fluid" style="font-size: large;">
-    <a class="navbar-brand" href="/home"> <img class="img-logo"
-        src="https://www.nashtechglobal.com/wp-content/uploads/2023/03/nashTech-logo-red.svg" alt="logo" /></a>
-    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" (click)="toggleNevbar()">
+  <div class="container-fluid" style="font-size: large">
+    <a class="navbar-brand" href="/home">
+      <img class="img-logo" src="https://www.nashtechglobal.com/wp-content/uploads/2023/03/nashTech-logo-red.svg"
+        alt="logo" /></a>
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+      (click)="toggleNevbar()">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive" [ngClass]="{ show: nevbarOpen }">
@@ -199,3 +201,4 @@
 <ng-template #elseTemplate>
   <router-outlet></router-outlet>
 </ng-template>
+<app-footer></app-footer>
