--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
   <div class="container-fluid" style="font-size: large">
-    <a class="navbar-brand" href="/home">
+    <a class="navbar-brand" (click)="navigate('home')">
       <img class="img-logo" src="https://www.nashtechglobal.com/wp-content/uploads/2023/03/nashTech-logo-red.svg"
         alt="logo" /></a>
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
